3/15/2005
	- Clean up the synchronization in the RRset class
	  (reported by Daniel Jensen <daniel.jensen@savvis.net>)

3/8/2005
	- Support the BIND misfeature of loading zones with no explicit
	  TTL by using the SOA minimum field.

3/7/2005
	- 1.6.6 released.

3/6/2005
	- $GENERATE statements should obey the start field.

3/1/2005
	- Add support for HMAC-SHA1 and HMAC-SHA256 TSIG algorithms.
	  (suggested by Olafur Gudmundsson <ogud@ogud.com>)

2/8/2005
	- Add infrastructure for parsing the output of ipconfig on
	  non-English version of windows, and add support for German
	  and Polish. (based on a patch by Piotr Kochanski)

2/7/2005
	- Add Options.refresh() (based on a patch from Th Kuhne)
	- Add the ResolverConfig class, which is largely based on the
	  FindServer class, except that it's not all static methods.
	  Add the ability to refresh the current ResolverConfig, and
	  make FindServer use ResolverConfig.
	- Add Lookup.refreshDefault (based on a patch from Th Kuhne)
	- Truncated messages aren't guaranteed to parse properly, so shouldn't
	  throw exceptions. (reported by Caleb Richardson <caleb@everyone.net>)
	- Work around a TCP bug in whatever broken nameserver Enom is using.
	  (reported by Caleb Richardson <caleb@everyone.net>)

2/4/2005
	- 1.6.5 released.
	- Records of an unknown type and length 0 weren't handled properly.
	  (reported by Olafur Gudmundsson <ogud@ogud.com>)
	- Fixed a bug in $INCLUDE handling.
	  (Christian Sepulveda <christian.sepulveda@nominum.com>)

2/3/2005
	- The Lookup.run() method should be usable more than once on a Lookup
	  object.
	  (reported by Joseph Shraibman <jks@iname.com>)

10/31/2004
	- Add partial IPv6 support to the ReverseMap class.
	  (based on a patch from Th Kuhne)

7/7/2004
	- Implement the $GENERATE master file directive.

6/28/2004
	- Canonicalizing a name created with the Name(Name src, int n)
	  constructor caused an exception.
	  (based on a patch from Nigel Tamplin <nigel@metica.com>)